@@ -5,8 +5,10 @@ import com.nonononoki.alovoa.Tools;
 import com.nonononoki.alovoa.component.TextEncryptorConverter;
 import com.nonononoki.alovoa.entity.Captcha;
 import com.nonononoki.alovoa.entity.User;
+import com.nonononoki.alovoa.entity.user.Gender;
 import com.nonononoki.alovoa.entity.user.UserDeleteToken;
-import com.nonononoki.alovoa.entity.user.UserSettings;
+import com.nonononoki.alovoa.entity.user.UserInterest;
+import com.nonononoki.alovoa.entity.user.UserMiscInfo;
 import com.nonononoki.alovoa.model.*;
 import com.nonononoki.alovoa.repo.ConversationRepository;
 import com.nonononoki.alovoa.repo.UserRepository;
@@ -18,10 +20,10 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.transaction.annotation.Transactional;
 
 import javax.crypto.BadPaddingException;
@@ -32,11 +34,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.security.GeneralSecurityException;
 import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -76,9 +79,9 @@ class UserServiceTest {
     private int firstNameLengthMin;
     @Value("${app.interest.autocomplete.max}")
     private int interestAutocompleteMax;
-    @MockBean
+    @MockitoBean
     private AuthService authService;
-    @MockBean
+    @MockitoBean
     private MailService mailService;
     private List<User> testUsers;
     @Autowired
@@ -158,6 +161,21 @@ class UserServiceTest {
             });
         }
 
+        //MISC INFO
+        userService.updateUserMiscInfo(UserMiscInfo.DRUGS_ALCOHOL_NO, true);
+        userService.updateUserMiscInfo(UserMiscInfo.FAMILY_WANT, true);
+        userService.updateUserMiscInfo(UserMiscInfo.DRUGS_CANNABIS_YES, true);
+        userService.updateUserMiscInfo(UserMiscInfo.DRUGS_TOBACCO_SOMETIMES, true);
+        userService.updateUserMiscInfo(UserMiscInfo.GENDER_IDENTITY_CIS, true);
+        userService.updateUserMiscInfo(UserMiscInfo.RELIGION_NO, true);
+        userService.updateUserMiscInfo(UserMiscInfo.RELATIONSHIP_OTHER, true);
+        userService.updateUserMiscInfo(UserMiscInfo.RELATIONSHIP_TYPE_POLYAMOROUS, true);
+        user1 = userRepo.findById(user1.getId()).get();
+        assertEquals(7, user1.getMiscInfos().size());
+        userService.updateUserMiscInfo(UserMiscInfo.RELATIONSHIP_TYPE_MONOGAMOUS, false);
+        user1 = userRepo.findById(user1.getId()).get();
+        assertEquals(6, user1.getMiscInfos().size());
+
         Mockito.when(authService.getCurrentUser()).thenReturn(user2);
         Mockito.when(authService.getCurrentUser(true)).thenReturn(user2);
         byte[] img2 = Tools.resourceToBytes("img/profile2.png");
@@ -202,18 +220,18 @@ class UserServiceTest {
         assertEquals(0, authService.getCurrentUser().getImages().size());
         userService.updateProfilePicture(img3, imgMimePng);
         assertNotNull(authService.getCurrentUser().getProfilePicture());
-        userService.updateAudio(Tools.resourceToBytes ("audio/file_example_MP3_700KB.mp3"), "mpeg");
+        userService.updateAudio(Tools.resourceToBytes("audio/file_example_MP3_700KB.mp3"), "mpeg");
         assertNotNull(user3.getAudio());
         userService.deleteAudio();
         assertNull(user3.getAudio());
 
+        User finalUser = user1;
         assertThrows(Exception.class, () -> {
-            deleteTest(user1);
+            deleteTest(finalUser);
         });
 
-
         //PROFILE PICTURE
-        byte[] imgLong = Tools.resourceToBytes ("img/long.jpeg");
+        byte[] imgLong = Tools.resourceToBytes("img/long.jpeg");
         userService.updateProfilePicture(imgLong, "jpeg");
         byte[] imgWide = Tools.resourceToBytes("img/wide.webp");
         userService.updateProfilePicture(imgWide, "webp");
@@ -223,7 +241,7 @@ class UserServiceTest {
         Mockito.when(authService.getCurrentUser(true)).thenReturn(user1);
         UUID uuid = user1.getUuid();
         ResponseEntity<Resource> userData = userService.getUserdata(uuid);
-        InputStream inputStream = userData.getBody().getInputStream();
+        InputStream inputStream = Objects.requireNonNull(userData.getBody()).getInputStream();
         String userDataString = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8)).lines()
                 .collect(Collectors.joining("\n"));
         UserGdpr gdpr = objectMapper.readValue(userDataString, UserGdpr.class);
@@ -238,15 +256,12 @@ class UserServiceTest {
                 objectMapper.writeValueAsString(gdpr.getGender()));
         assertEquals(objectMapper.writeValueAsString(authService.getCurrentUser().getIntention()),
                 objectMapper.writeValueAsString(gdpr.getIntention()));
-        // TODO Comparing Sets
-//		assertEquals(authService.getCurrentUser().getPreferedGenders(), gdpr.getPreferedGenders());
-//		assertEquals(authService.getCurrentUser().getInterests(),
-//				gdpr.getInterests());
-//		assertEquals(authService.getCurrentUser().getMessageSent(),
-//				gdpr.getMessageSent());
-
-//		assertEquals(objectMapper.writeValueAsString(authService.getCurrentUser().getWebPush()),
-//				objectMapper.writeValueAsString(gdpr.getWebPush()));
+		assertEquals(authService.getCurrentUser().getPreferedGenders(), gdpr.getPreferedGenders());
+        assertIterableEquals(authService.getCurrentUser().getInterests(),
+				gdpr.getInterests());
+        assertIterableEquals(authService.getCurrentUser().getMessageSent(),
+				gdpr.getMessageSent());
+        assertEquals(authService.getCurrentUser().getMiscInfos(), gdpr.getMiscInfo());
         assertEquals(authService.getCurrentUser().getLocationLatitude(), gdpr.getLocationLatitude());
         assertEquals(authService.getCurrentUser().getLocationLongitude(), gdpr.getLocationLongitude());
         assertEquals(authService.getCurrentUser().getPreferedMaxAge(), gdpr.getPreferedMaxAge());
@@ -288,7 +303,7 @@ class UserServiceTest {
         Mockito.when(authService.getCurrentUser()).thenReturn(user3);
         Mockito.when(authService.getCurrentUser(true)).thenReturn(user3);
         List<UserInterestDto> iterests = userService.getInterestAutocomplete(query);
-        List<String> iterestNames = iterests.stream().map(i -> i.getName()).collect(Collectors.toList());
+        List<String> interestNames = iterests.stream().map(UserInterestDto::getName).toList();
 
         assertEquals(interestAutocompleteMax, iterests.size());
         assertEquals(2, iterests.get(0).getCount());
@@ -296,11 +311,11 @@ class UserServiceTest {
         assertEquals(2, iterests.get(2).getCount());
         assertEquals(2, iterests.get(3).getCount());
         assertEquals(1, iterests.get(4).getCount());
-        assertTrue(iterestNames.contains(INTEREST1));
-        assertTrue(iterestNames.contains(INTEREST2));
-        assertTrue(iterestNames.contains(INTEREST3));
-        assertTrue(iterestNames.contains(INTEREST4));
-        assertTrue(iterestNames.contains(INTEREST5));
+        assertTrue(interestNames.contains(INTEREST1));
+        assertTrue(interestNames.contains(INTEREST2));
+        assertTrue(interestNames.contains(INTEREST3));
+        assertTrue(interestNames.contains(INTEREST4));
+        assertTrue(interestNames.contains(INTEREST5));
 
         Mockito.when(authService.getCurrentUser()).thenReturn(user2);
         Mockito.when(authService.getCurrentUser(true)).thenReturn(user2);
@@ -378,6 +393,40 @@ class UserServiceTest {
 
         assertNotNull(code);
         assertEquals(code, user1.getVerificationCode());
+    }
+
+    @Test
+    void testOnboarding() throws Exception {
+        User user1 = testUsers.get(0);
+        Mockito.when(authService.getCurrentUser()).thenReturn(user1);
+        Mockito.when(authService.getCurrentUser(true)).thenReturn(user1);
+
+        String imgMimePng = "png";
+        byte[] img1 = Tools.resourceToBytes("img/profile1.png");
+
+        String description = "description";
+        Long intentionId = 1L;
+        Set<String> interests = Set.of("int1", "int2");
+        List<Long> preferredGenders = List.of(1L, 2L);
+
+        ProfileOnboardingDto model = new ProfileOnboardingDto();
+        model.setProfilePictureMime(imgMimePng);
+        model.setDescription(description);
+        model.setIntention(intentionId);
+        model.setInterests(interests);
+        model.setPreferredGenders(preferredGenders);
+        model.setNotificationLike(false);
+        model.setNotificationChat(true);
+
+        user1 = userService.onboarding(img1, model);
+
+        assertEquals(description, user1.getDescription());
+        assertEquals(intentionId, user1.getIntention().getId());
+        assertTrue(interests.containsAll(user1.getInterests().stream().map(UserInterest::getText).collect(Collectors.toSet())));
+        assertTrue(preferredGenders.containsAll(user1.getPreferedGenders().stream().map(Gender::getId).toList()));
+        assertNotNull(user1.getProfilePicture());
+        assertFalse(user1.getUserSettings().isEmailLike());
+        assertTrue(user1.getUserSettings().isEmailChat());
     }
 
     private void removeAllInterests(List<User> ul) {
